# primal

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: linux.yml  windows.yml
benchmarks/: CMakeLists.txt  dsp.cpp
cmake/: PrimalConfig.cmake.in  PrimalPackages.cmake  PrimalUtils.cmake
cmake/PrimalPackages/: benchmark.cmake  doctest.cmake  fmt.cmake  fmt.patch  freetype.cmake  jpeg.cmake  nasm.cmake  ogg.cmake  vorbis.cmake  zlib.cmake
primal/: allocator.hpp  buffer.hpp  c_ptr.hpp  compatibility.hpp  dsp.hpp  endian.hpp  fixed.hpp  intrinsics.hpp  macros.hpp  pointer.hpp  rigid_vector.hpp  scope.hpp  smart_ptr.hpp  static_vector.hpp  string_utils.hpp  utf8.hpp  wildcard.hpp
tests/: CMakeLists.txt  allocator.cpp  buffer.cpp  c_ptr.cpp  compatibility.cpp  dsp.cpp  endian.cpp  fixed.cpp  intrinsics.cpp  macros.cpp  main.cpp  pointer.cpp  rigid_vector.cpp  scope.cpp  smart_ptr.cpp  static_vector.cpp  string_utils.cpp  utf8.cpp  wildcard.cpp
tests/import/: CMakeLists.txt  main.cpp
